<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notesEditView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteEditActivity">

    <FrameLayout
        android:id="@+id/editTitleFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@id/editBodyFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <EditText
        android:id="@+id/editTitleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:hint="@string/title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/editTitleFrame"
        app:layout_constraintEnd_toEndOf="@id/editTitleFrame"
        app:layout_constraintStart_toStartOf="@id/editTitleFrame"
        app:layout_constraintTop_toTopOf="@+id/editTitleFrame" />

    <ImageView
        android:id="@+id/saveButtonImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/save_button_description"
        android:onClick="onSaveClick"
        app:layout_constraintBottom_toTopOf="@id/editBodyFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTitleFrame"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/save_icon" />

    <FrameLayout
        android:id="@+id/editBodyFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <EditText
        android:id="@+id/editBodyText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:gravity="fill_horizontal"
        android:hint="@string/note_Text_Hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/editBodyFrame"
        app:layout_constraintEnd_toEndOf="@id/editBodyFrame"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/editBodyFrame"
        app:layout_constraintTop_toTopOf="@id/editBodyFrame"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>